Fix footer on mobile

--- a/PlanSuite/Views/Shared/_Layout.cshtml.css
+++ b/PlanSuite/Views/Shared/_Layout.cshtml.css
@@ -7,9 +7,9 @@ a.navbar-brand {
   word-break: break-all;
 }
 
-a {
+/*a {
   color: #0077cc;
-}
+}*/
 
 .btn-primary {
   color: #fff;
@@ -39,10 +39,8 @@ button.accept-policy {
   line-height: inherit;
 }
 
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px;
-}
+/*.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}*/
